
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int from ;
 int memcpy (unsigned char*,int ,int) ;
 int memset (unsigned char*,char,int) ;
 int strlen (int ) ;
 int subject ;
 int to ;

void init(unsigned char *nty, int *pos)
{
 memset(&nty[pos[1]], ' ', 56);
 memcpy(&nty[pos[1]], from, (strlen(from) < 57) ? strlen(from) : 56);
 memset(&nty[pos[2]], ' ', 56);
 memcpy(&nty[pos[2]], to, (strlen(to) < 57) ? strlen(to) : 56);
 memset(&nty[pos[3]], ' ', 56);
 memcpy(&nty[pos[3]], subject, (strlen(subject) < 57) ? strlen(subject) : 56);
}
